initial docs commit

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -78,3 +78,36 @@
   langid = {english},
   keywords = {Publishing,Software},
 }
+
+@article{Wick:2017,
+    doi = {10.1371/journal.pcbi.1005595},
+    author = {Wick, Ryan R. AND Judd, Louise M. AND Gorrie, Claire L. AND Holt, Kathryn E.},
+    journal = {PLOS Computational Biology},
+    publisher = {Public Library of Science},
+    title = {Unicycler: Resolving bacterial genome assemblies from short and long sequencing reads},
+    year = {2017},
+    month = {06},
+    volume = {13},
+    url = {https://doi.org/10.1371/journal.pcbi.1005595},
+    pages = {1-22},
+    number = {6},
+
+}
+
+@article{Terzian:2021,
+    author = {Terzian, Paul and Olo Ndela, Eric and Galiez, Clovis and Lossouarn, Julien and Pérez Bucio, Rubén Enrique and Mom, Robin and Toussaint, Ariane and Petit, Marie-Agnès and Enault, François},
+    title = "{PHROG: families of prokaryotic virus proteins clustered using remote homology}",
+    journal = {NAR Genomics and Bioinformatics},
+    volume = {3},
+    number = {3},
+    pages = {lqab067},
+    year = {2021},
+    month = {08},
+    issn = {2631-9268},
+    doi = {10.1093/nargab/lqab067},
+    url = {https://doi.org/10.1093/nargab/lqab067},
+    eprint = {https://academic.oup.com/nargab/article-pdf/3/3/lqab067/39584674/lqab067.pdf},
+}
+
+
+
