--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@article{hunt:2015,
+@article{Hunt:2015,
 	title = {Circlator: automated circularization of genome assemblies using long sequencing reads},
     author = {Hunt, Martin and Silva, Nishadi De and Otto, Thomas D. and Parkhill, Julian and Keane, Jacqueline A. and Harris, Simon R.},
     journal = {Genome Biology},
@@ -9,7 +9,7 @@
     year = {2015}
 }
 
-@article{mount:2007,
+@article{Mount:2007,
   title={Using the basic local alignment search tool (BLAST)},
   author={Mount, David W},
   journal={Cold Spring Harbor Protocols},
@@ -21,7 +21,7 @@
   publisher={Cold Spring Harbor Laboratory Press}
 }
 
-@article{altschul:1990,
+@article{Altschul:1990,
   title={Basic local alignment search tool},
   author={Altschul, Stephen F and Gish, Warren and Miller, Webb and Myers, Eugene W and Lipman, David J},
   journal={Journal of molecular biology},
@@ -110,4 +110,50 @@
 }
 
 
+@article{Wick:2021,
+	title = {Trycycler: consensus long-read assemblies for bacterial genomes},
+	volume = {22},
+	issn = {1474-760X},
+	shorttitle = {Trycycler},
+	url = {https://doi.org/10.1186/s13059-021-02483-z},
+	doi = {10.1186/s13059-021-02483-z},
+	number = {1},
+	urldate = {2023-08-08},
+	journal = {Genome Biology},
+	author = {Wick, Ryan R. and Judd, Louise M. and Cerdeira, Louise T. and Hawkey, Jane and Méric, Guillaume and Vezina, Ben and Wyres, Kelly L. and Holt, Kathryn E.},
+	month = sep,
+	year = {2021},
+	keywords = {Bacterial genomics, Genome assembly, Long-read sequencing, Oxford Nanopore sequencing, Whole-genome sequencing},
+	pages = {266},
+	file = {Snapshot:/Users/a1667917/Zotero/storage/TF3EWAS9/s13059-021-02483-z.html:text/html},
+}
+
+
+@article {Mallawaarachchi:2023,
+	author = {Vijini Mallawaarachchi and Michael J. Roach and Bhavya Papudeshi and Sarah K. Giles and Susanna R. Grigson and Przemyslaw Decewicz and George Bouras and Ryan D. Hesse and Laura K. Inglis and Abbey L. K. Hutton and Elizabeth A. Dinsdale and Robert A. Edwards},
+	title = {Phables: from fragmented assemblies to high-quality bacteriophage genomes},
+	elocation-id = {2023.04.04.535632},
+	year = {2023},
+	doi = {10.1101/2023.04.04.535632},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2023/04/04/2023.04.04.535632},
+	eprint = {https://www.biorxiv.org/content/early/2023/04/04/2023.04.04.535632.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article{Bouras:2023,
+    author = {Bouras, George and Sheppard, Anna E and Mallawaarachchi, Vijini and Vreugde, Sarah},
+    title = "{Plassembler: an automated bacterial plasmid assembly tool}",
+    journal = {Bioinformatics},
+    volume = {39},
+    number = {7},
+    pages = {btad409},
+    year = {2023},
+    month = {06},
+    abstract = "{With recent advances in sequencing technologies, it is now possible to obtain near-perfect complete bacterial chromosome assemblies cheaply and efficiently by combining a long-read-first assembly approach with short-read polishing. However, existing methods for assembling bacterial plasmids from long-read-first assemblies often misassemble or even miss bacterial plasmids entirely and accordingly require manual curation. Plassembler was developed to provide a tool that automatically assembles and outputs bacterial plasmids using a hybrid assembly approach. It achieves increased accuracy and computational efficiency compared to the existing gold standard tool Unicycler by removing chromosomal reads from the input read sets using a mapping approach.Plassembler is implemented in Python and is installable as a bioconda package using ‘conda install -c bioconda plassembler’. The source code is available on GitHub at https://github.com/gbouras13/plassembler. The full benchmarking pipeline can be found at https://github.com/gbouras13/plassembler\_simulation\_benchmarking, while the benchmarking input FASTQ and output files can be found at https://doi.org/10.5281/zenodo.7996690.}",
+    issn = {1367-4811},
+    doi = {10.1093/bioinformatics/btad409},
+    url = {https://doi.org/10.1093/bioinformatics/btad409},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/39/7/btad409/50836034/btad409.pdf},
+}
 
