add paper compilation to ci

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -81,7 +81,7 @@
 
 @article{Wick:2017,
     doi = {10.1371/journal.pcbi.1005595},
-    author = {Wick, Ryan R. AND Judd, Louise M. AND Gorrie, Claire L. AND Holt, Kathryn E.},
+    author = {Wick, Ryan R. and Judd, Louise M. and Gorrie, Claire L. and Holt, Kathryn E.},
     journal = {PLOS Computational Biology},
     publisher = {Public Library of Science},
     title = {Unicycler: Resolving bacterial genome assemblies from short and long sequencing reads},
