--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -46,7 +46,7 @@
     journal = {Journal of Open Source Software}
 }
 
-@article{Prodigal:2010,
+@article{Hyatt:2010,
   title = {Prodigal: Prokaryotic Gene Recognition and Translation Initiation Site Identification},
   shorttitle = {Prodigal},
   author = {Hyatt, Doug and Chen, Gwo-Liang and LoCascio, Philip F and Land, Miriam L and Larimer, Frank W and Hauser, Loren J},
