add prophage reorientation [skip ci]

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -129,17 +129,22 @@
 }
 
 
-@article {Mallawaarachchi:2023,
-	author = {Vijini Mallawaarachchi and Michael J. Roach and Bhavya Papudeshi and Sarah K. Giles and Susanna R. Grigson and Przemyslaw Decewicz and George Bouras and Ryan D. Hesse and Laura K. Inglis and Abbey L. K. Hutton and Elizabeth A. Dinsdale and Robert A. Edwards},
-	title = {Phables: from fragmented assemblies to high-quality bacteriophage genomes},
-	elocation-id = {2023.04.04.535632},
-	year = {2023},
-	doi = {10.1101/2023.04.04.535632},
-	publisher = {Cold Spring Harbor Laboratory},
-	URL = {https://www.biorxiv.org/content/early/2023/04/04/2023.04.04.535632},
-	eprint = {https://www.biorxiv.org/content/early/2023/04/04/2023.04.04.535632.full.pdf},
-	journal = {bioRxiv}
+@article{Mallawaarachchi:2023,
+    author = {Mallawaarachchi, Vijini and Roach, Michael J and Decewicz, Przemyslaw and Papudeshi, Bhavya and Giles, Sarah K and Grigson, Susanna R and Bouras, George and Hesse, Ryan D and Inglis, Laura K and Hutton, Abbey L K and Dinsdale, Elizabeth A and Edwards, Robert A},
+    title = "{Phables: from fragmented assemblies to high-quality bacteriophage genomes}",
+    journal = {Bioinformatics},
+    volume = {39},
+    number = {10},
+    pages = {btad586},
+    year = {2023},
+    month = {09},
+    abstract = "{Microbial communities have a profound impact on both human health and various environments. Viruses infecting bacteria, known as bacteriophages or phages, play a key role in modulating bacterial communities within environments. High-quality phage genome sequences are essential for advancing our understanding of phage biology, enabling comparative genomics studies and developing phage-based diagnostic tools. Most available viral identification tools consider individual sequences to determine whether they are of viral origin. As a result of challenges in viral assembly, fragmentation of genomes can occur, and existing tools may recover incomplete genome fragments. Therefore, the identification and characterization of novel phage genomes remain a challenge, leading to the need of improved approaches for phage genome recovery.We introduce Phables, a new computational method to resolve phage genomes from fragmented viral metagenome assemblies. Phables identifies phage-like components in the assembly graph, models each component as a flow network, and uses graph algorithms and flow decomposition techniques to identify genomic paths. Experimental results of viral metagenomic samples obtained from different environments show that Phables recovers on average over 49\\% more high-quality phage genomes compared to existing viral identification tools. Furthermore, Phables can resolve variant phage genomes with over 99\\% average nucleotide identity, a distinction that existing tools are unable to make.Phables is available on GitHub at https://github.com/Vini2/phables.}",
+    issn = {1367-4811},
+    doi = {10.1093/bioinformatics/btad586},
+    url = {https://doi.org/10.1093/bioinformatics/btad586},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/39/10/btad586/51972145/btad586.pdf},
 }
+
 
 @article{Bouras:2023,
     author = {Bouras, George and Sheppard, Anna E and Mallawaarachchi, Vijini and Vreugde, Sarah},
@@ -156,4 +161,18 @@
     url = {https://doi.org/10.1093/bioinformatics/btad409},
     eprint = {https://academic.oup.com/bioinformatics/article-pdf/39/7/btad409/50836034/btad409.pdf},
 }
+
+@article {Houtak:2023,
+	author = {Houtak, Ghais and Bouras, George and Nepal, Roshan and Shaghayegh, Gohar and Cooksley, Clare and  Psaltis, Alkis James and Wormald, Peter-John and Vreugde, Sarah},
+	title = {The Intra-Host Evolutionary Landscape And Pathoadaptation Of Persistent Staphylococcus aureus In Chronic Rhinosinusitis},
+	elocation-id = {2023.03.28.534496},
+	year = {2023},
+	doi = {10.1101/2023.03.28.534496},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Chronic rhinosinusitis (CRS) is a common chronic sinonasal mucosal inflammation associated with Staphylococcus aureus biofilm and relapsing infections. This study aimed to determine rates of S. aureus persistence and pathoadaptation in CRS patients by investigating the genomic relatedness and antibiotic resistance/tolerance in longitudinally collected S. aureus clinical isolates.A total of 68 S. aureus isolates were sourced from 34 CRS patients at least six months apart. Isolates were grown into 48-hour biofilms and tested for tolerance to antibiotics. A hybrid sequencing strategy was used to obtain high-quality reference-grade assemblies of all isolates. Single nucleotide variants (SNV) divergence in the core genome and sequence type clustering were used to analyse the relatedness of the isolate pairs. Single nucleotide and structural genome variations, plasmid similarity, and plasmid copy numbers between pairs were examined.Our analysis revealed that 41\% (14/34 pairs) of S. aureus isolates were persisters, while 59\% (20/34 pairs) were non-persisters. Persister isolates showed episode-specific mutational changes over time with a bias towards events in genes involved in adhesion to the host and mobile genetic elements such as plasmids, prophages, and insertion sequences. A significant increase in the copy number of conserved plasmids of persister strains (p\&lt;0.05) was seen, indicating a role of the {\textquotedblleft}mobilome{\textquotedblright} in promoting persistence. This was accompanied by a significant increase in biofilm tolerance against all tested antibiotics (p\&lt;0.001), which was linked to a significant increase in biofilm biomass (p\&lt;0.05) over time, indicating a biofilm central pathoadaptive process in persisters. In conclusion, our study provides important insights into the mutational changes underlying S. aureus persistence in CRS patients highlighting pathoadaptive mechanisms in S. aureus persisters culminating in increased biofilm biomass linked to an increase in plasmid copy number over time.Competing Interest StatementThe authors have declared no competing interest.AERDaspirin-exacerbated respiratory diseaseAMRAntimicrobial ResistanceCARDComprehensive Antibiotic Resistance DatabaseCDScoding sequencesCFUColony Forming UnitCIClinical IsolateCLSIClinical and Laboratory Standards InstituteCRSChronic RhinosinusitisCRSsNPCRS without Nasal PolyposisCRSwNPCRS with Nasal PolyposisCVCrystal VioletMFUMcFarland UnitsMICMinimum Inhibitory ConcentrationMIC50MIC required to inhibit the growth of 50\% of organismsMIC90MIC required to inhibit the growth of 90\% of organismsMLSTMulti-Locus Sequence TypingNCTCNational Collection of Type CultureNGSNext Generation SequencingONTOxford nanopore technologyPCRPolymerase Chain ReactionSNVSingle-Nucleotide VariantSVstructural variantsVFDBVirulence Factor DatabaseVLKCsVariable-length k-mer clustersWGSWhole Genome Sequencing},
+	URL = {https://www.biorxiv.org/content/early/2023/03/28/2023.03.28.534496},
+	eprint = {https://www.biorxiv.org/content/early/2023/03/28/2023.03.28.534496.full.pdf},
+	journal = {bioRxiv}
+}
+
 
