remove https from mgen dois [skip ci]

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -168,7 +168,7 @@
    volume = "9",
    number = "11",
    pages = "",
-   doi = "https://doi.org/10.1099/mgen.0.001128",
+   doi = "10.1099/mgen.0.001128",
    url = "https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.001128",
    publisher = "Microbiology Society",
    issn = "2057-5858",
@@ -201,7 +201,7 @@
    volume = "7",
    number = "11",
    pages = "",
-   doi = "https://doi.org/10.1099/mgen.0.000685",
+   doi = "10.1099/mgen.0.000685",
    url = "https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000685",
    publisher = "Microbiology Society",
    issn = "2057-5858",
