--- a/run_dnaapler.ipynb
+++ b/run_dnaapler.ipynb
@@ -28,7 +28,7 @@
         "Main Instructions\n",
         "\n",
         "* Cell 1 install dnaapler. This must be run first.\n",
-        "* Once is has  been run, you can run Cell 2 as many times as you wish.\n",
+        "* Once Cell 1 has  been run, you can run Cell 2 to run dnaapler as many times as you wish.\n",
         "\n",
         "Other instructions\n",
         "\n",
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
