--- a/run_dnaapler.ipynb
+++ b/run_dnaapler.ipynb
@@ -39,22 +39,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ii39RG8eOZUx",
-        "outputId": "566baba2-5c08-42f1-85b9-b0601a7d2907"
+        "outputId": "eca36903-e6a5-4061-9aec-14932a1a72fc"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3.10\n",
-            "CPU times: user 1.06 ms, sys: 0 ns, total: 1.06 ms\n",
-            "Wall time: 1.07 ms\n"
+            "3.11\n",
+            "installing dnaapler ...\n",
+            "CPU times: user 308 ms, sys: 44.3 ms, total: 352 ms\n",
+            "Wall time: 1min 14s\n"
           ]
         }
       ],
@@ -66,35 +67,35 @@
         "%%time\n",
         "import os\n",
         "from sys import version_info\n",
-        "python_version = f\"{version_info.major}.{version_info.minor}\"\n",
-        "PYTHON_VERSION = python_version\n",
-        "DNAAPLER_VERSION = \"0.8.1\"\n",
+        "#python_version = f\"{version_info.major}.{version_info.minor}\"\n",
+        "PYTHON_VERSION = \"3.11\"\n",
+        "DNAAPLER_VERSION = \"1.1.0\"\n",
         "\n",
         "\n",
         "print(PYTHON_VERSION)\n",
         "\n",
-        "if not os.path.isfile(\"MAMBA_READY\"):\n",
-        "  print(\"installing mamba...\")\n",
-        "  os.system(\"wget -qnc https://github.com/conda-forge/miniforge/releases/latest/download/Mambaforge-Linux-x86_64.sh\")\n",
-        "  os.system(\"bash Mambaforge-Linux-x86_64.sh -bfp /usr/local\")\n",
-        "  os.system(\"mamba config --set auto_update_conda false\")\n",
-        "  os.system(\"touch MAMBA_READY\")\n",
+        "if not os.path.isfile(\"CONDA_READY\"):\n",
+        "  print(\"installing miniforge...\")\n",
+        "  os.system(\"wget -qnc https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\")\n",
+        "  os.system(\"bash Miniconda3-latest-Linux-x86_64.sh -bfp /usr/local\")\n",
+        "  os.system(\"conda config --set auto_update_conda false\")\n",
+        "  os.system(\"touch CONDA_READY\")\n",
         "\n",
         "if not os.path.isfile(\"DNAAPLER_READY\"):\n",
         "  print(\"installing dnaapler ...\")\n",
-        "  os.system(f\"mamba install -y -c conda-forge -c bioconda python='{PYTHON_VERSION}' dnaapler=={DNAAPLER_VERSION}\")\n",
+        "  os.system(f\"conda install -y -c conda-forge -c bioconda python='{PYTHON_VERSION}' dnaapler=={DNAAPLER_VERSION}\")\n",
         "  os.system(\"touch DNAAPLER_READY\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tfltpbZ_QLfZ",
-        "outputId": "9a2f208f-ae79-4616-8d57-3189273bec8e"
+        "outputId": "fd180a74-f799-433e-82a5-8928c9c2adf1"
       },
       "outputs": [
         {
@@ -107,8 +108,8 @@
             "Your output is in output_dnaapler.\n",
             "Zipping the output directory so you can download it all in one go.\n",
             "Output directory has been zipped to output_dnaapler.zip\n",
-            "CPU times: user 50 ms, sys: 47 µs, total: 50.1 ms\n",
-            "Wall time: 5.49 s\n"
+            "CPU times: user 71.1 ms, sys: 5.48 ms, total: 76.6 ms\n",
+            "Wall time: 9.5 s\n"
           ]
         }
       ],
